--- a/src/sass/page/login.scss
+++ b/src/sass/page/login.scss
@@ -23,7 +23,7 @@
   }
   .v-content__wrap {
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   .container {
     display: flex;
