--- a/src/sass/page/mobile.scss
+++ b/src/sass/page/mobile.scss
@@ -19,7 +19,7 @@
     }
   }
   .content {
-    overflow-y: scroll;
+    overflow-y: auto;
     height: calc(100vh - 180px);
 
     .v-input__control {
