--- a/src/sass/page/pageDefault.scss
+++ b/src/sass/page/pageDefault.scss
@@ -625,7 +625,7 @@
   padding: 0.5rem 0;
   width: calc(300px - 2rem);
   height: calc(100vh - (115px + 64px + 32px + 1rem));
-  overflow-y: scroll;
+  overflow-y: auto;
   ul {
     list-style-type: none;
     padding-left: 0;
